Fix list item align bug

--- a/src/shared/block.scss
+++ b/src/shared/block.scss
@@ -57,6 +57,10 @@
     }
   }
 
+  li {
+    text-align: $paragraph-align;
+  }
+
   pre, code {
     @include use-font($code-font);
     @include use-font-size($code-font-size);
